# aoc-2022-2025-c

./: .gdbinit  .gitignore  2022.code-workspace  CMakeLists.txt  README.md  bash.sh
.github/workflows/: c-cpp.yml
000/: part1.c  part2.c
001/: part1.c  part2.c
002/: CMakeLists.txt  Readme.md  day002  part1.c  part2.c
003/: CMakeLists.txt  Readme.md  part1.c  part2.c
004/: part1.c  part2.c
005/: part1.c  part1.h  part2.c  part2.h  partX.h
007/: CMakeLists.txt  Readme.md  part1.c  part2.c  partx.h
009/: part1.c  part2.c
099/: CMakeLists.txt  Readme.md  part1.c  part1.h
2022/: CMakeLists.txt
2022/000/: CMakeLists.txt  part1.c  part2.c
2022/001/: CMakeLists.txt  part1.c  part2.c
2022/002/: CMakeLists.txt  part1.c  part2.c
2022/003/: CMakeLists.txt  day003  part1.c  part2.c
2022/004/: CMakeLists.txt  part1.c  part2.c
2022/005/: CMakeLists.txt  part1.c  part1.h  part2.c  part2.h  partX.h  partx.c  partx.h
2022/007/: CMakeLists.txt  part1.c  part2.c  partx.h
2022/009/: CMakeLists.txt  part1.c  part2.c  partx.c  partx.h
2025/: CMakeLists.txt
2025/000/: CMakeLists.txt  part1.c  part2.c  partx.c  partx.h
2025/001/: CMakeLists.txt  Readme.md  part1.c  part2.c
2025/002/: CMakeLists.txt  part1.c  part2.c
2025/002/data/: loginput.txt
2025/003/: CMakeLists.txt  bug.txt  part1.c  part2.c  partx.c  partx.h
2025/004/: CMakeLists.txt  part1.c  part2.c  partx.c  partx.h
2025/005/: CMakeLists.txt  part1.c  part2.c  partx.h
2025/006/: CMakeLists.txt  Readme.md  main.c  part1.c  part2.c  partx.c  partx.h
2025/006/data/: log.txt
2025/007/: 007.code-workspace  CMakeLists.txt  Readme.md  aoc2025log1514.txt  main.c  memo.c  part1.c  part1_2.c  part2.c  partx.c  partx.h
2025/007/abandonned/: part2.c
2025/007/data/: map.txt  test1.txt  theory.txt
2025/008/: CMakeLists.txt  Readme.md  part1.c  part2.c  partx.c  partx.h
2025/009/: CMakeLists.txt  Readme.md  part1.c  part2.c  partx.c  partx.h
2025/009/data/: map.txt
lib/: CMakeLists.txt  aoc_2d_dynarr.c  aoc_array.c  aoc_coordinates.c  aoc_dynamic_array.c  aoc_gen_ll.c  aoc_linked_list.c  aoc_numeric.c  aoc_parser.c  aoc_ranges.c  aoc_ring_buffer.c  aoc_solution.c  aoc_stack.c  aoc_tree.c
lib/2d_engine/: coordinates.c  cursor.c  engine.c  input.c  objects.c  tools.c  zones.c
lib/2d_engine/experimental/: engine.c
lib/2d_engine/inc/: eng_types.h  engine.h  objects.h  zones.h
lib/cmake/: CMakeLists.txt  FindCUnit.cmake
lib/inc/: ansi_cmd.h  ansi_fmt.h  aoc_2d_dynarr.h  aoc_2d_engine.h  aoc_2d_object.h  aoc_coordinates.h  aoc_dynamic_array.h  aoc_helpers.h  aoc_input.h  aoc_linked_list.h  aoc_numeric.h  aoc_parser.h  aoc_ranges.h  aoc_ring_buffer.h  aoc_stack.h  aoc_tree.h  aoc_types.h  arch.h
lib/linked_lists/: ll_defines.h  ll_items.h  ll_types.h
lib/scripts/pretty/: aoc_pretty_printers.py
lib/tests/: CMakeLists.txt  test_linked_lists.c  test_ring_buffer.c  test_suite.c  test_tree.c
