set(SAVED_YEAR ${YEAR})
get_filename_component(YEAR ${CMAKE_CURRENT_SOURCE_DIR} NAME)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/000)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/001)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/002)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/003)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/004)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/005)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/007)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/009)
add_definitions(-DCONFIG_YEAR="${YEAR}")
set(YEAR ${SAVED_YEAR})
